libs/parser/testdata/fixtures/negative/escaped_hash_error.csl
config-section:
	key: value\#notvalid
